Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-77353

QListWidget selection with "invert" tracks incorrectly

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 5.14.0 RC1, 5.14
    • 5.1.0 , 5.9.8
    • Widgets: Itemviews
    • None
    • All
    • 88047be4ecb99799f4876ff3e7001abe34ac29bc

    Description

      With a simple QListWidget (I imagine it happens with QListView also, but didn't test), you can "invert" the selected state of an item by holding down the command key and clicking, on the Mac (presumably something similar on other platforms with other modifier keys). If an item is selected it becomes deselected, if it is deselected it becomes selected. However, on macOS this happens as you drag the mouse, with every change in the mouse position. In other words, as you drag the mouse along within a single item, with the command key and mouse button both held down, the item you are dragging inside flickers between being selected and deselected, toggling every time the mouse moves by a pixel. This is not standard behavior. :->

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            chehrlic Christian Ehrlicher
            bhaller Ben Haller
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes